terraform/basics/security.tf
resource "aws_security_group" "codepanda_sg" {
  name        = "codepanda_sg"
  description = "Security group for codepanda resources"
  vpc_id      = aws_vpc.codepanda_iac_vpc.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Allow SSH access from anywhere"
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
